<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExcerciseAddActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/teal_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:text="@string/name"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:autofillHints="운동명을 입력하세요."
            android:hint="@string/excerciseNameHint"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="25sp"
            tools:text="dddd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1">

        <TextView
            android:id="@+id/setNum"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:text="@string/setNum"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/inputSetNum"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:autofillHints="세트수를 입력하세요."
            android:hint="@string/setNumHint"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="25sp"
            tools:text="dddd" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/teal_200"
        android:contentDescription="@string/ability4"
        android:src="@drawable/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>