<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/itemName"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="운동명" />

    <TextView
        android:id="@+id/itemSetNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@id/set"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="15" />

    <TextView
        android:id="@+id/set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@id/guideLine"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="300dp" />


    <Button
        android:id="@+id/discountSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/teal_200"
        android:drawableTop="@drawable/discount_set"
        android:text="@string/discountSet"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemName" />

    <Button
        android:id="@+id/deleteSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/teal_200"
        android:drawableTop="@drawable/delete_set"
        android:text="@string/deleteSet"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/discountSet"
        app:layout_constraintStart_toEndOf="@id/discountSet" />


</androidx.constraintlayout.widget.ConstraintLayout>